[project]
name = "lancedb-cloud-benchmarks"
version = "0.1.3"
description = ""
authors = [{ name = "LanceDB Devs", email = "dev@lancedb.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "lancedb==0.17.0b3",
    "tqdm",
    "pyarrow",
    "backoff"
]

[tool.uv]
prerelease = "allow"
dev-dependencies = [
]

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/lancedb/"